add_subdirectory(ConfigMigration)
add_subdirectory(CsvExport)
add_subdirectory(CsvImport)
add_subdirectory(DbAndroid)
# No SQLITE2 cmake module yet
#add_subdirectory(DbSqlite2)
if(SQLCIPHER_FOUND)
    add_subdirectory(DbSqliteCipher)
endif(SQLCIPHER_FOUND)
add_subdirectory(DbSqliteSystemData)
add_subdirectory(DbSqliteWx)
add_subdirectory(HtmlExport)
add_subdirectory(MultiEditorImage)
add_subdirectory(JsonExport)
add_subdirectory(PdfExport)
add_subdirectory(Printing)
add_subdirectory(RegExpImport)
add_subdirectory(ScriptingTcl)
add_subdirectory(SqlEnterpriseFormatter)
add_subdirectory(SqlExport)
add_subdirectory(SqlFormatterSimple)
add_subdirectory(XmlExport)
